tests/errors/parameter_declared2.f90
program parameter_declared2
    implicit none
    real, parameter :: a = 3.14
    print *, a
end program